# catalog-of-complexity

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BOOTSTRAP_PLAN.md  CLAUDE.md  LICENSE  LICENSE-DATA  README.md  pyproject.toml
.claude/: launch.json  settings.json
.claude/commands/: coc-apply-retros.md  coc-lease.md  coc-lint-skills.md  coc-materialize.md  coc-new-task.md  coc-release.md  coc-run.md  coc-validate.md
.codex/: config.toml
.codex/prompts/: coc-apply-retros.md  coc-run.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
config/: autorun.yaml  bootstrap_seed.yaml  bootstrap_seed_v2.yaml  phase.yaml  priority-systems.yaml
docs/: index.html
prompts/: analyze-archetypes.md  apply-retros-run.md  autonomous-run.md  define-metrics.md  extract-observations.md  profile-system.md  review-records.md  scout-systems.md  task-envelope.md
schemas/: event.schema.json  metric.schema.json  observation.schema.json  retrospective.schema.json  run.schema.json  source.schema.json  system-relation.schema.json  system.schema.json  task.schema.json
scripts/: _seed_v2_data.py  _seed_v2_metrics_data.py  bootstrap_from_seed.py  build_release.py  build_seed_v2.py  complete_task.py  export_taxonomy.py  heartbeat.py  lease_task.py  lint_skills.py  materialize_warehouse.py  requeue_stale_tasks.py  run_evals.py
tests/: conftest.py  test_dispatch.py  test_evals.py  test_fixtures.py  test_phase.py  test_queue.py  test_release.py  test_schemas.py  test_smoke.py  test_sources.py  test_warehouse.py  test_worklist.py
(+1515 files in other folders)
